--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,13 @@
         margin: auto;
     }
     .header{
+        background-color: #f9fcfb;
         width: 100%;
         max-width: 768px;
         margin: auto;
         top: 0;
         padding-left: 5%;
         padding-top: 3%;
-        padding-bottom: 2%;
         box-shadow:0px 2px 18px 5px rgba(0,0,0,0.07);
     }
     .header ul{
@@ -74,7 +74,8 @@
         font-size: 2.5rem;
     }
     .footer{
-        padding-top: 3%;
+        background-color: #f9fcfb;
+        padding-top: 2%;
         width: 100%;
         max-width: 768px;
         margin: auto;
