--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
         top: 0;
         padding-left: 5%;
         padding-top: 3%;
-        box-shadow:0px 2px 18px 5px rgba(0,0,0,0.01);
+        box-shadow: 0px 3px 15px rgba(0,0,0,0.02);
     }
     .header ul{
         margin: 0;
@@ -79,7 +79,7 @@
         margin: auto;
         bottom: 0;
         position: fixed;
-        box-shadow:0px 2px 18px 5px rgba(0,0,0,0.02);
+        box-shadow: 0px 3px 15px rgba(0,0,0,0.05);
     }
     .footer ul{
         margin: 0;
