--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@
         margin: auto;
         bottom: 0;
         position: fixed;
-        box-shadow: 0px 3px 15px rgba(0,0,0,0.03);
+        box-shadow: 2px -2px 18px 5px rgba(0,0,0,0.03);
     }
     .footer ul{
         margin: 0;
