--- a/css/style.css
+++ b/css/style.css
@@ -63,10 +63,9 @@
         padding-top: 3%;
     }
     .main{
-        height: 500px;
+        height: 600px;
         width: 100%;
         position: relative;
-        padding: 215px 0 0 0;
     }
     .main h1{
         text-align: center;
@@ -74,13 +73,14 @@
         color: #ec524b;
         padding: 1%;
         font-size: 2.5rem;
+        padding: 210px 0 0 0;
     }
     .footer{
         padding-top: 2%;
         width: 100%;
         max-width: 768px;
         bottom: 0;
-        position: absolute;
+        position: absolute;;
         box-shadow: 2px -2px 18px 5px rgba(0,0,0,0.03);
     }
     .footer ul{
